Version 5.0.0

* Split off the custom star system feature to the Customizable Star Systems mod
  - Adversary portion now has a dependency on this split-off mod
* Changed source code and package names



Version 4.4.1

* Some changes and updates to the Adversary's configs for supported mods
* Minor grammar changes
* Made a Silly bounty slightly sillier
  - Also changed to Assassination instead of Obliteration



Version 4.4.0

* Added lore for the Adversary faction
  - Now has custom faction relation descriptions, as well as custom dialog for most Adversary interactions
* Fixed the "enableAdversarySillyBounties" setting not immediately applying to a new game.
* Fixed a Silly bounty having the wrong giving and target factions (quite a mystery how this didn't register to me for a long time)



Version 4.3.2

* A few MagicLib bounty adjustments:
  - Reworked Sindrian bounty variants; now just as hull-tanky as the other DO bounties
  - Increased credit reward for Hegemony bounty
  - Decreased credit reward for Tri-Tachyon bounty; increased reputation reward to compensate
  - Changed a weapon choice in a Silly bounty
  - Minor fixes for another Silly bounty
* Changed Adversary neutral market and encounter theme to the Persean League themes
  - Sorry Tri-Tachyon fans, but the PL music is just too good and also fits the Adversary faction a little better
  - Main, non-market, and non-encounter theme now set to generic, Independent market theme.



Version 4.3.1

* Fixed new game crash when generating a custom star system with both a true "hasSystemwideNebula" and a specifed "setLocationOverride"



Version 4.3.0

* Added a special, respawning Adversary fleet, which spawns on an Adversary planet and always drops a single Alpha Core upon defeat.
  - Added "enableAdversaryPersonalFleet" to settings.json and LunaSettings
  - Only applies to new games, and also requires having an Adversary planetary market upon starting a new game