@@ -1,51 +1,48 @@
 {
-	# Optimal Star System
 	"adversary_optimal":{
-		"isEnabled":true, # Change to false if you don't want this system to spawn
+		"isEnabled":true,
 		"isCoreWorldSystem":true,
 		"hasSystemwideNebula":false,
 		"addCoronalHypershunt":false,
 		"addDomainCryosleeper":false,
-		"setLocation":1, # 1st closest constellation to Core Worlds
+		"setLocation":1,
 		"systemMusic":"music_diktat_market_hostile",
-		"fringeJumpPoint":{"orbitRadius":8410},
-		"starsInSystemCenter":{
-			"stars":[
-				{	"name":"Optimal",
-					"type":"star_blue_giant",
-					"radius":1100,
-					"coronaRadius":825,
-					"flareChance":0.0,
-				},
-				{	"name":"Zenith",
-					"type":"star_yellow",
-					"radius":800,
-					"coronaRadius":600,
-					"flareChance":0.0,
-				},
-				{	"name":"Pinnacle",
-					"type":"star_orange",
-					"radius":650,
-					"coronaRadius":488,
-					"flareChance":0.0,
-				},
-			],
-			"orbitRadius":1850,
-		},
-		"orbitingBodies":[
-			{	"type":"gas_giant",
+		"entities":[
+			{
+				"entity":"empty_location",
+				"numOfCenterStars":3,
+				"orbitRadius":1850,
+			},
+			{
+				"entity":"star",
+				"name":"Optimal",
+				"type":"star_blue_giant",
+				"radius":1100,
+				"coronaRadius":825,
+				"flareChance":0.0,
+			},
+			{
+				"entity":"star",
+				"name":"Zenith",
+				"type":"star_yellow",
+				"radius":800,
+				"coronaRadius":600,
+				"flareChance":0.0,
+			},
+			{
+				"entity":"star",
+				"name":"Pinnacle",
+				"type":"star_orange",
+				"radius":650,
+				"coronaRadius":488,
+				"flareChance":0.0,
+			},
+			{
+				"entity":"planet",
+				"type":"gas_giant",
 				"orbitRadius":5170,
 				"radius":250,
-				"conditions":[
-					"hot",
-					"high_gravity",
-					"volatiles_plentiful",
-				],
-				"entitiesAtStablePoints":[
-					{"type":"comm_relay","name":"Optimal Relay","factionId":"adversary"},
-					{"type":"inactive_gate","name":"Optimal Gate"},
-					{"type":"jump_point","name":"Inner System Jump-point"},
-				],
+				"conditions":["hot","high_gravity","volatiles_plentiful"],
 				"marketSize":6,
 				"factionId":"adversary",
 				"aiCoreAdmin":true,
@@ -61,17 +58,16 @@
 					["lightindustry","gamma_core",,false],
 				],
 			},
-			{	"type":"toxic",
+			{
+				"entity":"planet",
+				"type":"toxic",
 				"orbitRadius":625,
-				"focus":1,
+				"focus":4,
 				"radius":75,
 				"conditions":[
-					"tectonic_activity",
-					"toxic_atmosphere",
-					"ore_ultrarich",
-					"rare_ore_ultrarich",
-					"volatiles_plentiful",
-					"organics_plentiful",
+					"tectonic_activity","toxic_atmosphere",
+					"ore_ultrarich","rare_ore_ultrarich",
+					"volatiles_plentiful","organics_plentiful",
 				],
 				"marketSize":6,
 				"factionId":"adversary",
@@ -88,16 +84,13 @@
 					["lightindustry","gamma_core",,false],
 				],
 			},
-			{	"type":"barren-bombarded",
+			{
+				"entity":"planet",
+				"type":"barren-bombarded",
 				"orbitRadius":1060,
-				"focus":1,
+				"focus":4,
 				"radius":60,
-				"conditions":[
-					"no_atmosphere",
-					"ore_ultrarich",
-					"rare_ore_moderate",
-					"volatiles_trace",
-				],
+				"conditions":["no_atmosphere","ore_ultrarich","rare_ore_moderate","volatiles_trace"],
 				"marketSize":6,
 				"factionId":"adversary",
 				"aiCoreAdmin":true,
@@ -114,23 +107,15 @@
 					["fuelprod","gamma_core","synchrotron",false],
 				],
 			},
-			{	"type":"jungle",
+			{
+				"entity":"planet",
+				"type":"jungle",
 				"orbitRadius":6770,
 				"radius":130,
 				"conditions":[
-					"habitable",
-					"hot",
-					"mild_climate",
-					"ore_ultrarich",
-					"organics_plentiful",
-					"farmland_bountiful",
-					"ruins_vast",
-					"solar_array",
-				],
-				"entitiesAtStablePoints":[
-					,
-					{"type":"nav_buoy","name":"Optimal Navigation Buoy","factionId":"adversary"},
-					{"type":"sensor_array","name":"Optimal Listening Station","factionId":"adversary"},
+					"habitable","hot","mild_climate",
+					"ore_ultrarich","organics_plentiful",
+					"farmland_bountiful","ruins_vast","solar_array",
 				],
 				"marketSize":6,
 				"factionId":"adversary",
@@ -147,7 +132,9 @@
 					["commerce","alpha_core","dealmaker_holosuite",false],
 				],
 			},
-			{	"type":"water",
+			{
+				"entity":"planet",
+				"type":"water",
 				"orbitRadius":7380,
 				"radius":130,
 				"conditions":[
@@ -162,22 +149,27 @@
 					"pollution",
 				],
 			},
-		],
-		"systemFeatures":[
-			{	"type":"asteroid_belt",
+			{"entity":"comm_relay","focus":[4,3],"name":"Optimal Relay","factionId":"adversary"},
+			{"entity":"inactive_gate","focus":[4,4],"name":"Optimal Gate"},
+			{"entity":"jump_point","focus":[4,5],"name":"Inner System Jump-point"},
+			{"entity":"nav_buoy","focus":[7,4],"name":"Optimal Navigation Buoy","factionId":"adversary"},
+			{"entity":"sensor_array","focus":[7,5],"name":"Optimal Listening Station","factionId":"adversary"},
+			{"entity":"jump_point","orbitRadius":8410,"name":"Fringe Jump-point"},
+			{
+				"entity":"asteroid_belt",
 				"orbitRadius":7960,
 				"name":"Ring of Despair",
 				"innerBandIndex":1,
 				"outerBandIndex":3,
 			},
-			{	"type":"rings_ice0",
+			{
+				"entity":"ring",
+				"type":"rings_ice0",
 				"orbitRadius":300,
-				"focus":5,
+				"focus":8,
 				"name":"Hope's Aura",
 				"bandIndex":3,
 			},
-			# An abandoned mining station in the asteroid belt
-			#{"type":"station","orbitRadius":8010,"name":"Abandoned Mining Station","stationType":"station_mining00","customDescriptionId":"station_mining_remnant"},
-		]
-	}
+		],
+	},
 }
